Writing our story

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,7 @@
   <section id="welcome">
     <div class="container">
       <p>
-        Bicycle rights Carles cray Banksy Pitchfork.
-        Etsy food truck Shoreditch sartorial, brunch retro viral +1 farm-to-table tofu Truffaut wayfarers Schlitz.
-        McSweeney's wayfarers farm-to-table cray 8-bit readymade.
-        Don't forget to RSVP! — M &amp; E
+		  Hello! We're getting married!! We've created this website to help organize all the information you need for our big day. We can't wait to celebrate with all of our amazing friends and family this summer! Until then, take some time to explore our site. - M &amp: E
       </p>
     </div>
   </section>
@@ -167,16 +164,13 @@
       })();
       </script>
       <p>
-        Bicycle rights Carles cray Banksy Pitchfork.
-        Etsy food truck Shoreditch sartorial, brunch retro viral +1 farm-to-table tofu Truffaut wayfarers Schlitz.
-        McSweeney's wayfarers farm-to-table cray 8-bit readymade.
-        Williamsburg iPhone fashion axe locavore lomo vinyl brunch, twee 8-bit lo-fi plaid.
+		  It's pretty hard for us to pin down exactly when we met, but we can both agree on our first memory of becoming friends. We were chosen to play in the very prestigous string quartet at Lakeside Elementary School. During our big preformance, Melanie hit a wrong note and cried in frustration. Eric continued playing and made it through the preformance. It was the first time we worked on anything together and although it was a rocky start, we became, and stayed friends. 
       </p>
       <p>
-        Before they sold out narwhal Pitchfork asymmetrical selvage, fap wolf.
-        Bespoke direct trade ethnic High Life fixie.
-        Cred fashion axe readymade banjo flannel, craft beer meh typewriter irony beard artisan letterpress Austin cornhole.
+		  Soon enough we were in high school, Eric had lost his baby fat, Melanie had a full set of braces, and the sparks flew! In 2003 Eric invited Melanie to watch his band play (yea Kingston12!) and she gleefully accepted. During the set Eric hooked his bass guitar up to a wireless amp, strolled over to Melanie and serenaded her. It was a little out of character for Eric to do something so outgoing, but it did the trick, and Melanie was smitten. 
       </p>
+      <p>
+		  We spent high school side by and side, and then in college, we decided on separate schools, cities, and states. But after those 5 years were over we decided enough was enough and we moved in together in NYC. Finally, after being friends for almost 16 years, dating for 10, and living together for 3, Eric popped the question on a beautiful rooftop in our NYC neighborhood. Surrounded by some of our amazing friends and family, we decided to make it offical! 
     </div>
   </section>
 
@@ -193,8 +187,7 @@
             Allison Schwartz
             <div class="role">Maid of Honor</div>
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -College roomate, best friend, partner in crime, peusdo cousin. Excellent story teller, speech maker, party planner, and running on little to no sleep. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -205,8 +198,7 @@
             Dylan Waller
             <div class="role">Best man</div>
             <p>
-              Squid VHS distillery kale chips, street art synth PBR&amp;B jean shorts tofu single-origin coffee locavore Odd Future twee.
-              Pitchfork keytar actually lo-fi iPhone, bitters before they sold out Vice keffiyeh shabby chic sustainable.
+              -Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than this older brother.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -216,8 +208,7 @@
           <div class="details">
             Jillian Waller
             <p>
-              Swag tote bag messenger bag Shoreditch, actually mustache deep v banh mi asymmetrical hella master cleanse.
-              Master cleanse Tumblr ethical Tonx drinking vinegar.
+              -Youngest Waller sister, sassiest Waller sibling, most athletic, MVP of speeches at the engagement party, is currently a "southern girl" (hey Tulane!).
             </p>
           </div>
           <div class="clearfix"></div>
@@ -227,8 +218,7 @@
           <div class="details">
             Cameron Breen
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              - Younger Breen brother, beast in all things, middle american, fastest eater and drinker, most likely to weep openly at the wedding.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -238,8 +228,7 @@
           <div class="details">
             Nicole Fleisher
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+				-Best friend, sorority sister, basically college roomate, bunny. Skills include creating desserts out of random fridge components cheering everyone up and choregraphed dancing. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -249,8 +238,7 @@
           <div class="details">
             Chad Burgess
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Best friend, Seatgeek, best repoire with all bartenders and baristas, charimastic. Enjoys art of flight, snowboaring and all things tupac. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -260,8 +248,7 @@
           <div class="details">
             Angela Amato
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Best friend, college roomate, best cook, most italian, best hair, most likely to be coerced into doing hair and makeup for everyone in the room. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -271,8 +258,7 @@
           <div class="details">
             Cormack Glass
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Best friend, old friend, fellow downtown dweller, Good Beer, Tuesday nights, friendliest, most focused on community building.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -282,8 +268,7 @@
           <div class="details">
             Elizabeth Weiss
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Best friend, oldest friend, Lakeside elementary school, family friend, doesn't mince words, was there since the beginning, hates flags. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -293,8 +278,7 @@
           <div class="details">
             Nikos Poulikidis
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Yo, yo, yo, yo, yo. Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest driver. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -305,8 +289,7 @@
             Richard Ellenson
             <div class="role">Officiant</div>
             <p>
-              Brunch chia kogi Echo Park typewriter squid.
-              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+              -Last but certainly not least, Melanie's amazing uncle has agreed to become an officiant for our wedding. Richard is one of the most eloquent people we know and he's been such an important force in both of our lives. When we decided to get married we were sure that we wanted our ceremony to be deeply personal and we knew that Richard was the perfect person to help us create the feeling and ceremony we wanted! 
             </p>
           </div>
           <div class="clearfix"></div>
