wedding party pics

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman bestman">
-          <img src="http://placehold.it/80x80">
+          <img src="/static/images/dylan.jpg">
           <div class="details">
             Dylan Waller
             <div class="role">Best man</div>
@@ -214,7 +214,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/80x80">
+          <img src="/static/images/cameron.jpg">
           <div class="details">
             Cameron Breen
             <p>
@@ -234,7 +234,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/80x80">
+          <img src="/static/images/chad.jpg">
           <div class="details">
             Chad Burgess
             <p>
@@ -264,7 +264,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/80x80">
+          <img src="/static/images/liz.jpg">
           <div class="details">
             Elizabeth Weiss
             <p>
@@ -284,7 +284,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="officiant">
-          <img src="http://placehold.it/80x80">
+          <img src="/static/images/richard.jpg">
           <div class="details">
             Richard Ellenson
             <div class="role">Officiant</div>
