--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,11 @@
   <section id="welcome">
     <div class="container">
       <p>
-		  Hello! We're getting married!! We've created this website to help organize all the information you need for our big day. We can't wait to celebrate with all of our amazing friends and family this summer! Until then, take some time to explore our site. - M &amp: E
+        Hello!
+        We're getting married!!
+        We've created this website to help organize all the information you need for our big day.
+        We can't wait to celebrate with all of our amazing friends and family this summer!
+        Until then, take some time to explore our site. - M &amp; E
       </p>
     </div>
   </section>
@@ -164,13 +168,24 @@
       })();
       </script>
       <p>
-		  It's pretty hard for us to pin down exactly when we met, but we can both agree on our first memory of becoming friends. We were chosen to play in the very prestigous string quartet at Lakeside Elementary School. During our big preformance, Melanie hit a wrong note and cried in frustration. Eric continued playing and made it through the preformance. It was the first time we worked on anything together and although it was a rocky start, we became, and stayed friends. 
+        It's pretty hard for us to pin down exactly when we met, but we can both agree on our first memory of becoming friends.
+        We were chosen to play in the very prestigous string quartet at Lakeside Elementary School.
+        During our big preformance, Melanie hit a wrong note and cried in frustration.
+        Eric continued playing and made it through the preformance.
+        It was the first time we worked on anything together and although it was a rocky start, we became, and stayed friends.
       </p>
       <p>
-		  Soon enough we were in high school, Eric had lost his baby fat, Melanie had a full set of braces, and the sparks flew! In 2003 Eric invited Melanie to watch his band play (yea Kingston12!) and she gleefully accepted. During the set Eric hooked his bass guitar up to a wireless amp, strolled over to Melanie and serenaded her. It was a little out of character for Eric to do something so outgoing, but it did the trick, and Melanie was smitten. 
+        Soon enough we were in high school, Eric had lost his baby fat, Melanie had a full set of braces, and the sparks flew!
+        In 2003, Eric invited Melanie to watch his band play (yea Kingston12!) and she gleefully accepted.
+        During the set Eric hooked his bass guitar up to a wireless amp, strolled over to Melanie and serenaded her.
+        It was a little out of character for Eric to do something so outgoing, but it did the trick, and Melanie was smitten.
       </p>
       <p>
-		  We spent high school side by and side, and then in college, we decided on separate schools, cities, and states. But after those 5 years were over we decided enough was enough and we moved in together in NYC. Finally, after being friends for almost 16 years, dating for 10, and living together for 3, Eric popped the question on a beautiful rooftop in our NYC neighborhood. Surrounded by some of our amazing friends and family, we decided to make it offical! 
+        We spent high school side by and side, and then in college, we decided on separate schools, cities, and states.
+        But after those 5 years were over we decided enough was enough and we moved in together in NYC.
+        Finally, after being friends for almost 16 years, dating for 10, and living together for 3, Eric popped the question on a beautiful rooftop in our NYC neighborhood.
+        Surrounded by some of our amazing friends and family, we decided to make it offical!
+      </p>
     </div>
   </section>
 
@@ -187,7 +202,8 @@
             Allison Schwartz
             <div class="role">Maid of Honor</div>
             <p>
-              -College roomate, best friend, partner in crime, peusdo cousin. Excellent story teller, speech maker, party planner, and running on little to no sleep. 
+              College roomate, best friend, partner in crime, peusdo cousin.
+              Excellent story teller, speech maker, party planner, and running on little to no sleep.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -198,7 +214,7 @@
             Dylan Waller
             <div class="role">Best man</div>
             <p>
-              -Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than this older brother.
+              Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than this older brother.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -208,7 +224,7 @@
           <div class="details">
             Jillian Waller
             <p>
-              -Youngest Waller sister, sassiest Waller sibling, most athletic, MVP of speeches at the engagement party, is currently a "southern girl" (hey Tulane!).
+              Youngest Waller sister, sassiest Waller sibling, most athletic, MVP of speeches at the engagement party, is currently a "southern girl" (hey Tulane!).
             </p>
           </div>
           <div class="clearfix"></div>
@@ -218,7 +234,7 @@
           <div class="details">
             Cameron Breen
             <p>
-              - Younger Breen brother, beast in all things, middle american, fastest eater and drinker, most likely to weep openly at the wedding.
+              Younger Breen brother, beast in all things, middle american, fastest eater and drinker, most likely to weep openly at the wedding.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -228,7 +244,8 @@
           <div class="details">
             Nicole Fleisher
             <p>
-				-Best friend, sorority sister, basically college roomate, bunny. Skills include creating desserts out of random fridge components cheering everyone up and choregraphed dancing. 
+              Best friend, sorority sister, basically college roomate, bunny.
+              Skills include creating desserts out of random fridge components cheering everyone up and choregraphed dancing.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -238,7 +255,8 @@
           <div class="details">
             Chad Burgess
             <p>
-              -Best friend, Seatgeek, best repoire with all bartenders and baristas, charimastic. Enjoys art of flight, snowboaring and all things tupac. 
+              Best friend, Seatgeek, best repoire with all bartenders and baristas, charimastic.
+              Enjoys art of flight, snowboaring and all things tupac.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -248,7 +266,7 @@
           <div class="details">
             Angela Amato
             <p>
-              -Best friend, college roomate, best cook, most italian, best hair, most likely to be coerced into doing hair and makeup for everyone in the room. 
+              Best friend, college roomate, best cook, most italian, best hair, most likely to be coerced into doing hair and makeup for everyone in the room.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -258,7 +276,7 @@
           <div class="details">
             Cormack Glass
             <p>
-              -Best friend, old friend, fellow downtown dweller, Good Beer, Tuesday nights, friendliest, most focused on community building.
+              Best friend, old friend, fellow downtown dweller, Good Beer, Tuesday nights, friendliest, most focused on community building.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -268,7 +286,7 @@
           <div class="details">
             Elizabeth Weiss
             <p>
-              -Best friend, oldest friend, Lakeside elementary school, family friend, doesn't mince words, was there since the beginning, hates flags. 
+              Best friend, oldest friend, Lakeside elementary school, family friend, doesn't mince words, was there since the beginning, hates flags.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -278,7 +296,8 @@
           <div class="details">
             Nikos Poulikidis
             <p>
-              -Yo, yo, yo, yo, yo. Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest driver. 
+              Yo, yo, yo, yo, yo.
+              Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest driver. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -289,7 +308,9 @@
             Richard Ellenson
             <div class="role">Officiant</div>
             <p>
-              -Last but certainly not least, Melanie's amazing uncle has agreed to become an officiant for our wedding. Richard is one of the most eloquent people we know and he's been such an important force in both of our lives. When we decided to get married we were sure that we wanted our ceremony to be deeply personal and we knew that Richard was the perfect person to help us create the feeling and ceremony we wanted! 
+              Last but certainly not least, Melanie's amazing uncle has agreed to become an officiant for our wedding.
+              Richard is one of the most eloquent people we know and he's been such an important force in both of our lives.
+              When we decided to get married we were sure that we wanted our ceremony to be deeply personal and we knew that Richard was the perfect person to help us create the feeling and ceremony we wanted!
             </p>
           </div>
           <div class="clearfix"></div>
