--- a/templates/index.html
+++ b/templates/index.html
@@ -172,7 +172,7 @@
         We were chosen to play in the very prestigous string quartet at Lakeside Elementary School.
         During our big preformance, Melanie hit a wrong note and cried in frustration.
         Eric continued playing and made it through the preformance.
-        It was the first time we worked on anything together and although it was a rocky start, we became, and stayed friends.
+        It was the first time we worked on anything together and although it was a rocky start, we became, and stayed&nbsp;friends.
       </p>
       <p>
         Soon enough we were in high school, Eric had lost his baby fat, Melanie had a full set of braces, and the sparks flew!
@@ -214,7 +214,7 @@
             Dylan Waller
             <div class="role">Best man</div>
             <p>
-              Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than this older brother.
+              Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than his older brother.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -297,7 +297,7 @@
             Nikos Poulikidis
             <p>
               Yo, yo, yo, yo, yo.
-              Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest driver. 
+              Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest&nbsp;driver.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -308,9 +308,9 @@
             Richard Ellenson
             <div class="role">Officiant</div>
             <p>
-              Last but certainly not least, Melanie's amazing uncle has agreed to become an officiant for our wedding.
+              Last but certainly not least, Melanie's amazing uncle has agreed to become the officiant for our wedding.
               Richard is one of the most eloquent people we know and he's been such an important force in both of our lives.
-              When we decided to get married we were sure that we wanted our ceremony to be deeply personal and we knew that Richard was the perfect person to help us create the feeling and ceremony we wanted!
+              When we decided to get married, we were sure that we wanted our ceremony to be deeply personal and we knew that Richard was the perfect person to help us create the feeling and ceremony we wanted!
             </p>
           </div>
           <div class="clearfix"></div>
