Added hotel info

--- a/templates/index.html
+++ b/templates/index.html
@@ -202,8 +202,8 @@
             Allison Schwartz
             <div class="role">Maid of Honor</div>
             <p>
-              College roomate, best friend, partner in crime, peusdo cousin.
-              Excellent story teller, speech maker, party planner, and running on little to no sleep.
+              College roomate, best friend, partner in crime, pseudo cousin.
+              Excellent at running on no sleep, party planning, story telling and speech making.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -214,7 +214,8 @@
             Dylan Waller
             <div class="role">Best man</div>
             <p>
-              Younger Waller brother, excellent snowboarder, adventurer, always orders the best thing on the menu, and consistently looks older than his older brother.
+              Younger Waller brother, excellent snowboarder, adventurer.
+			  Always orders the best thing on the menu, and consistently looks older than his older brother.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -244,8 +245,8 @@
           <div class="details">
             Nicole Fleisher
             <p>
-              Best friend, sorority sister, basically college roomate, bunny.
-              Skills include creating desserts out of random fridge components cheering everyone up and choregraphed dancing.
+              Best friend, sorority sister, bunny.
+              Skills include creating desserts out of random fridge components, cheering everyone up and choregraphed dancing (includes, but is not limited to, the box step and reggaeton).
             </p>
           </div>
           <div class="clearfix"></div>
@@ -255,8 +256,8 @@
           <div class="details">
             Chad Burgess
             <p>
-              Best friend, Seatgeek, best repoire with all bartenders and baristas, charimastic.
-              Enjoys art of flight, snowboaring and all things tupac.
+              Best friend, Seatgeeker, best repoire with all bartenders and baristas.  
+			  Enjoys art of flight, snowboarding, carrying books in his pockets and all things Tupac. 
             </p>
           </div>
           <div class="clearfix"></div>
@@ -286,7 +287,7 @@
           <div class="details">
             Elizabeth Weiss
             <p>
-              Best friend, oldest friend, Lakeside elementary school, family friend, doesn't mince words, was there since the beginning, hates flags.
+              Best friend, oldest friend, Lakeside elementary schooler, family friend, doesn't mince words, was there since the beginning, hates flags.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -297,7 +298,7 @@
             Nikos Poulikidis
             <p>
               Yo, yo, yo, yo, yo.
-              Best friend, Greek, most physically fit, most likely to get a dance party going, entrepenaur, most vivacious, fastest&nbsp;driver.
+              Best friend, Greek, most physically fit, most likely to get a dance party going, entrepreneur, most vivacious, fastest&nbsp;driver.
             </p>
           </div>
           <div class="clearfix"></div>
@@ -336,6 +337,15 @@
         <span class="icon"></span>
         Directions
       </h2>
+      <p>
+        Our wedding will take place in Brooklyn, NY.
+        We're so excited to have our wedding in the city that we call home, but we know many of you will be traveling to be with us, so we've planned some accomodations! 
+      </p>
+      <p>
+        We recommend you stay in the New York Marriott at the Brooklyn Bridge.
+        You can reserve a room by calling 1-718-246-7000.
+        We've reserved a room block for our wedding guests, so just remember to say "Melanie and Eric" when you call!
+      </p>
       <a class="map" href="https://maps.google.com/maps?daddr=Liberty+Warehouse%4040.676821,-74.0179397&t=m&z=14">
         <img src="http://maps.googleapis.com/maps/api/staticmap?visual_refresh=true&scale=2&zoom=12&sensor=false&size=640x360&markers=color:blue%7Clabel:S%7C40.676821,-74.0179397">
       </a>
