--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
         It's pretty hard for us to pin down exactly when we met, but we can both agree on our first memory of becoming friends.
         We were chosen to play in the very prestigous string quartet at Lakeside Elementary School.
         During our big preformance, Melanie hit a wrong note and cried in frustration.
-        Eric continued playing and made it through the preformance.
+        Eric continued playing and made it through the performance.
         It was the first time we worked on anything together and although it was a rocky start, we became, and stayed&nbsp;friends.
       </p>
       <p>
