Pull everyone's pics into the repo

--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,7 @@
       </h2>
       <ul>
         <li class="bridesmaid maid-of-honor">
-          <img src="http://images.ak.instagram.com/profiles/profile_8044236_75sq_1374935103.jpg">
+          <img src="/static/images/ally.jpg">
           <div class="details">
             Allison Schwartz
             <div class="role">Maid of Honor</div>
@@ -221,7 +221,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://images.ak.instagram.com/profiles/profile_18368774_75sq_1369026080.jpg">
+          <img src="/static/images/jillian.jpg">
           <div class="details">
             Jillian Waller
             <p>
@@ -241,7 +241,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://images.ak.instagram.com/profiles/profile_14318412_75sq_1335113601.jpg">
+          <img src="/static/images/nicole.jpg">
           <div class="details">
             Nicole Fleisher
             <p>
@@ -263,7 +263,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://images.ak.instagram.com/profiles/profile_1364806_75sq_1381150849.jpg">
+          <img src="/static/images/angela.jpg">
           <div class="details">
             Angela Amato
             <p>
@@ -273,7 +273,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://images.ak.instagram.com/profiles/profile_6338560_75sq_1370006683.jpg">
+          <img src="/static/images/cormack.jpg">
           <div class="details">
             Cormack Glass
             <p>
@@ -293,7 +293,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://images.ak.instagram.com/profiles/profile_223207104_75sq_1361847879.jpg">
+          <img src="/static/images/nikos.jpg">
           <div class="details">
             Nikos Poulikidis
             <p>
