--- a/templates/index.html
+++ b/templates/index.html
@@ -328,6 +328,8 @@
       <a href="http://www.crateandbarrel.com/"><img style="width: 180px" src="/static/images/crate-and-barrel.png"></a>
       <hr style="width: 10em; margin: 2em auto">
       <a href="http://www.williams-sonoma.com/"><img style="width: 280px" src="/static/images/williams-sonoma.png"></a>
+      <hr style="width: 10em; margin: 2em auto">
+      <a href="http://www.bloomingdales.com/registry/wedding/guest/?registryId=6123351"><img style="width: 294px" src="/static/images/bloomingdales.png"></a>
     </div>
   </section>
 
