--- a/templates/index.html
+++ b/templates/index.html
@@ -330,6 +330,8 @@
       <a href="http://www.williams-sonoma.com/"><img style="width: 280px" src="/static/images/williams-sonoma.png"></a>
       <hr style="width: 10em; margin: 2em auto">
       <a href="http://www.bloomingdales.com/registry/wedding/guest/?registryId=6123351"><img style="width: 294px" src="/static/images/bloomingdales.png"></a>
+      <hr style="width: 10em; margin: 2em auto">
+      <a href="http://www.travelersjoy.com/ericandmelanie"><img style="width: 275px" src="/static/images/travelers-joy.png"></a>
     </div>
   </section>
 
